<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/item_add_task1"
        android:icon="@drawable/ic_action_content_new"
        app:showAsAction="always"
        android:title="@string/main_menu_add_task"/>
    <item
        android:id="@+id/item_add_task2"
        app:showAsAction="never"
        android:title="@string/main_menu_add_task"/>
    <item
        android:id="@+id/item_sort_by"
        app:showAsAction="never"
        android:title="@string/main_menu_sort_by">
        <menu>
            <item
                android:id="@+id/item_sort_by_due_asc"
                app:showAsAction="never"
                android:title="@string/main_menu_sort_by_due_asc"/>
            <item
                android:id="@+id/item_sort_by_due_desc"
                app:showAsAction="never"
                android:title="@string/main_menu_sort_by_due_desc"/>
            <item
                android:id="@+id/item_sort_by_created_asc"
                app:showAsAction="never"
                android:title="@string/main_menu_sort_by_created_asc"/>
            <item
                android:id="@+id/item_sort_by_created_desc"
                app:showAsAction="never"
                android:title="@string/main_menu_sort_by_created_desc"/>
            <item
                android:id="@+id/item_sort_by_prio_asc"
                app:showAsAction="never"
                android:title="@string/main_menu_sort_by_prio_asc"/>
            <item
                android:id="@+id/item_sort_by_prio_desc"
                app:showAsAction="never"
                android:title="@string/main_menu_sort_by_prio_desc"/>
        </menu>
    </item>
    <item
        android:id="@+id/item_filter"
        app:showAsAction="never"
        android:title="@string/main_menu_filter">
        <menu>
            <item
                android:id="@+id/item_filter_completed"
                app:showAsAction="never"
                android:title="@string/main_menu_filter_completed"/>
            <item
                android:id="@+id/item_filter_uncompleted"
                app:showAsAction="never"
                android:title="@string/main_menu_filter_uncompleted"/>
            <item
                android:id="@+id/item_filter_due"
                app:showAsAction="never"
                android:title="@string/main_menu_filter_due"/>
            <item
                android:id="@+id/item_filter_show_all"
                app:showAsAction="never"
                android:title="@string/main_menu_filter_show_all"/>
        </menu>
    </item>

</menu>