<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".EditTask" >

        <TextView
            android:id="@+id/label_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_task_title"
            style="@style/Label" />

        <RelativeLayout
            android:id="@+id/title_and_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/check_completed"
                android:ems="10"
                android:hint="@string/edit_task_title_hint" >

                <requestFocus />
            </EditText>

            <CheckBox
                android:id="@+id/check_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/task_title" />
        </RelativeLayout>

        <TextView
            android:id="@+id/label_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_task_priority"
            style="@style/Label" />

        <Spinner
            android:id="@+id/spinner_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@android:layout/simple_spinner_item" />

        <TextView
            android:id="@+id/label_due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/edit_task_due_date"
            style="@style/Label" />

        <RelativeLayout
            android:id="@+id/button_and_due_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/button_set_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/abc_list_selector_holo_light"
                android:src="@drawable/ic_action_collections_go_to_today" />

            <co.kukurin.tasklist.TextViewDate
                android:id="@+id/text_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/button_set_due_date"
                android:gravity="center_vertical"
                android:text="12/31/2013"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:ignore="HardcodedText" />

        </RelativeLayout>

        <TextView
            android:id="@+id/label_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_task_description"
            style="@style/Label" />
        
        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/edit_task_description_hint" />

    </LinearLayout>

</ScrollView>